discussion/kv_engine/177008/177008_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[refactor] Create standalone unit test for GetRandomKey

There is something "strange" with the implementation of GetRandomKey
on the server as it seems to be a delay until the key gets available
after being stored on the server.

After storing a document you may immediately fetch it through a
call with get, but that doesn't seem to be the case with GetRandomKey
as I had to add a few retries until it got available.

Change-Id: Iaa0a2f76822bf4701c79ac65eaab6ca9fb0833a4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 07:24:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 07:44:26.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21392/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21392/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8290/ : ABORTED

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T07:43:30.829Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T07:43:30.829Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T07:43:30.829Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (0 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8290/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8290/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19626/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19626/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47285/ : FAILURE

Failure of GoogleTest "WarmupTest.OperationsInterlockedWithWarmup":

<pre>
[ RUN      ] WarmupTest.OperationsInterlockedWithWarmup
..\kv_engine\engines\ep\tests\module_tests\evp_store_warmup_test.cc(342): error: Expected: (nullptr) != (store->getVBuckets().getBucket(vbid)), actual: (nullptr) vs (nullptr)
[  FAILED  ] WarmupTest.OperationsInterlockedWithWarmup (16 ms)
WarmupTest.OperationsInterlockedWithWarmup
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47285/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18520/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:30:20: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
            conn = cluster->getConnection(0);
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:47:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:96:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:206:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:633:23: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto connection = cluster->getConnection(0);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:855:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->getBucket("metering");
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18520/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:30:20:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18520/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8191/ : FAILURE

Compile error at [2022-07-03T07:41:19.049Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8191/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20404/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T07:32:04.329Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T07:32:04.329Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T07:32:04.329Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (1 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20404/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20752/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T07:42:01.757Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T07:42:01.757Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T07:42:01.757Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (3 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28785/ : FAILURE

Failure of GoogleTest "MeteringTest.MeterGetRandomKey":

<pre>
[ RUN      ] MeteringTest.MeterGetRandomKey
[2022-07-03T07:38:06.206Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_serverless/metering_test.cc:1181: Failure
[2022-07-03T07:38:06.206Z] Expected: (1) >= (std::stoi(v)), actual: 1 vs 8
[2022-07-03T07:38:06.206Z] [  FAILED  ] MeteringTest.MeterGetRandomKey (2 ms)
MeteringTest.MeterGetRandomKey
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28785/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17671/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39732/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
